add excel dict import
optimize ghttp
optimize valid