@@ -1,3 +1,4 @@
 add excel dict import
 optimize ghttp
 optimize valid
+excel import ignore unnecessary column
